--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body{
 a{
     color: rgb(245, 226, 197);
 }
-iframe{
+iframe{/*Para o fundo fica preto do video*/
     background-color: black;
-}/*Para o fundo fica preto do video*/
+}
+script{
+    width: 500px;    
+}
